fix: text overflow improvements and save button state (#107)
* fix: requests are correctly aborted when fetch wrapper unmounted

* feat: add multiline ellipsis overflow to deck covers

* feat: add width restraint to popup modal headers

* feat: add scrollable to overflowing study cards

* fix: collapse study lesson result buttons on long titles

* fix: safely center study card text and add grid-center mixin

* fix: resolve race with updating metadata and adding cards simultaneously

* fix: disable editor save button when there are no changes

* test: fix deck editor test logic

* revert: resolve race with updating metadata

--- a/src/pages/view-deck-page/view-deck-page.scss
+++ b/src/pages/view-deck-page/view-deck-page.scss
@@ -12,7 +12,8 @@ $flashcard-index-container-width: 45px;
     grid-auto-flow: row;
     grid-template-columns: auto min-content;
     grid-template-rows: min-content auto;
-    column-gap: 8px;
+    column-gap: 16px;
+    overflow-wrap: anywhere;
 
     .action-button-group {
       display: flex;
